cabal-version:       2.4

-- For further on cabal documentation, see http://haskell.org/cabal/users-guide/

name:                HaskellTemporalLib
version:             0.1.1.1
-- synopsis:
description:         Provides types and functions to solve
                     Temporal Problems using Temporal Networks.
-- bug-reports:
license:             LGPL-3.0-only
license-file:        LICENSE
author:              CrystalSplitter
maintainer:          null
-- copyright:
-- category:
extra-source-files: 
    CHANGELOG.md README.md


library
  exposed-modules:
    HaskellTemporalLib.Tools
    HaskellTemporalLib.Internal.Graph.Graph
    HaskellTemporalLib.Internal.Graph.Mut.VectorGraph
    HaskellTemporalLib.Internal.Graph.Matrix
  -- other-extensions:
  other-modules:
    HaskellTemporalLib.Internal.MinimalSTN
    , HaskellTemporalLib.Internal.STNMap
    , HaskellTemporalLib.Internal.Stn
    , HaskellTemporalLib.Internal.Schedules

  -- We're adding test-framework here so that our language
  -- client picks it up. There's better ways, but for now
  -- this will work.
  build-depends:
    base >= 4.12.0.0
    , containers
    , mtl
    , vector
    , primitive
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Widentities


test-suite HTLSuite
  type:
    exitcode-stdio-1.0
  main-is:
    TestMain.hs
  hs-source-dirs:
    test
  other-modules:
    TestUtils
    QCGraph
    QCStn
    Fuzzing.FloydWarshall
    Fuzzing.FuzzyWeights
    Fuzzing.FuzzyIFPC
  
  -- Required 'test-framework' as per Risto-Stevcev's gist:
  -- https://gist.github.com/Risto-Stevcev/a9798abc898fba99235b
  build-depends:
    base >= 4.12.0.0
    , HUnit
    , test-framework
    , test-framework-hunit
    , containers
    , HaskellTemporalLib
    , random
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Widentities
    -fprof-auto
    ---- Profiling options
    -- -prof
    -- -threaded
    -- "-with-rtsopts=-N -p -s -h -i0.1"
